# EnterprisePlatform-PurpleAgent

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
src/: agent.py  executor.py  server.py
tests/: test_purple_agent.py
